# Terminal

./: .gitignore  README.md
Components/: AnimatedButton.swift  Symbol.swift  Textbox.swift
Components/Lists/: ListElement.swift  ListItem.swift  ListTab.swift  TerminalList.swift
Components/Overlay/: LargeOverlayMenu.swift  (+6 more)
Extension/: DisplayButtonExtension.swift  FormatKeywordItemExtension.swift  ListItemExtension.swift  StackExtension.swift  ViewExtension.swift
Service/: HistoryService.swift  KeywordsService.swift  RustService.swift  TerminalService.swift  TerminalTabService.swift
Terminal++/: ContentView.swift  RustService.swift  Terminal__App.swift  Terminal__BridgingHeader.h
Terminal++.xcodeproj/: project.pbxproj
Terminal++/rust-shell/: Cargo.toml  build.rs
Terminal++/rust-shell/.cargo/: config.toml
Terminal++/rust-shell/src/: keywords.rs  lib.rs  main.rs  record_history.rs  shell.rs  terminal_input.rs  terminal_manager.rs  terminal_output.rs  terminal_session.rs
Terminal++/rust-shell/src/command/: builtin.rs  external.rs  input.rs  mod.rs  output.rs
Terminal++/rust-shell/src/command/input/: input.rs  lexer.rs  mod.rs  parser.rs
Terminal++/rust-shell/src/command/keywords/: builtin.rs  external.rs
Terminal++/rust-shell/src/command/keywords/docker/: mod.rs  ps.rs
Terminal++/rust-shell/src/command/keywords/git/: add.rs  checkout.rs  commit.rs  mod.rs  push.rs  status.rs
Terminal++/rust-shell/src/command/output/: mod.rs  output.rs
Terminal++/rust-shell/src/helpers/: mod.rs
Terminal++/rust-shell/src/terminal/: manager.rs  session.rs
(+170 files in other folders)
