[package]
name = "rust-shell"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
swift-bridge = "0.1"
uuid = { version = "1.23", features = ["v4"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
swift-bridge-build = "0.1"
